refactorings, log load profile in specified time intervals